# Koba-UMC

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GTM_PLAYBOOK.md  LAUNCH_CHECKLIST.md  LAUNCH_POSTS.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  umc_full_specification.docx  umc_full_specification.docx.md
.github/workflows/: build-wheels.yml  publish.yml  test.yml
configs/: financial_v1.yaml
docs/: case-study-fintech.md
scripts/: benchmark.py  benchmark_competitors.py  benchmark_comprehensive.py  benchmark_csv_to_mnf.py  benchmark_fintech_casestudy.py  benchmark_gorilla.py  benchmark_multitype.py  benchmark_optimal.py  benchmark_real_world.py  benchmark_standard.py  benchmark_tiered.py  benchmark_vectorforge.py  decode.py  demo.py  demo_live.py  demo_searchable_compression.py  encode.py  entropy_analyzer.py  experiment_conv.py  experiment_hourly.py  experiment_v10_target.py  experiment_v11_library_vq.py  experiment_v12_improved_vq.py  experiment_v13_dac_vq.py  experiment_v14_fsq.py  experiment_v14b_low_dim.py  experiment_v15a_big_decoder.py  experiment_v15b_wide_vq.py  experiment_v15c_combined.py  experiment_v2.py  experiment_v5_perwindow.py  experiment_v6_widebot.py  experiment_v6b_convbot.py  experiment_v7_nopool.py  experiment_v8_optimal.py  experiment_v9_hvqvae.py  measure_two_tier.py  real_experiment.py  run_v15_probes.py  search.py  (+2 more)
tests/: test_arithmetic_coding.py  test_benchmarks.py  test_compress_api.py  test_decoder.py  test_encoder.py  test_float16.py  test_gorilla.py  test_hvqvae.py  test_image_audio.py  test_integration.py  test_lossless_codec.py  test_mnf_tiered.py  test_normalized_lossless.py  test_optimal.py  test_pipelined.py  test_preprocessors.py  test_processor.py  test_storage.py  test_streaming.py  test_synthetic_generators.py  test_tiered_codec.py  test_universal_preprocessor.py  test_vectordb.py  test_video.py
umc/: __init__.py  __main__.py  _neural.py  benchmark_report.py  cli_formatting.py  config.py  dashboard.py  hub.py  pandas_ext.py
umc/cext/: __init__.py  build.py  kernels.c
umc/codec/: __init__.py  arithmetic.py  byte_model.py  gorilla.py  lossless.py  optimal.py  residual.py  streaming.py  tiered.py
umc/data/: __init__.py  audio_loader.py  image_loader.py  loaders.py  preprocessors.py  synthetic.py  video_loader.py
umc/decoder/: __init__.py  base.py  conv_decoder.py  hvqvae_decoder.py  mlp_decoder.py
(+28 files in other folders)
